apps/workloads/automation/renovate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: renovate-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: renovate-server
  template:
    metadata:
      labels:
        app: renovate-server
        networking/expose-http-api: "true"
    spec:
      securityContext:
        runAsUser: 12021
        runAsGroup: 0
        runAsNonRoot: true
        fsGroup: 0
      containers:
        - name: renovate-server
          image: ghcr.io/mend/renovate-ce
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 8080
              name: http-api
          volumeMounts:
            - name: cache-volume
              mountPath: "/tmp/renovate/cache"
          resources:
            requests:
              cpu: "25m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
      volumes:
        - name: cache-volume
          emptyDir: {}
