apps/workloads/automation/renovate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: renovate-server
spec:
  ports:
    - port: 8080
      targetPort: http-api
      name: http-api
  selector:
    app: renovate-server
