apps/workloads/automation/renovate/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: renovate-webhook
spec:
  parentRefs:
    - name: external-gateway
      namespace: traefik
  hostnames:
    - "renovate.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /webhook
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: renovate-rate-limit
      backendRefs:
        - name: renovate-server
          port: 8080
