apps/workloads/automation/renovate/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: renovate-server-policy
  namespace: automation
spec:
  endpointSelector:
    matchLabels:
      app: renovate-server
  egress:
    # Allow access to the Kubernetes API server and Internet (GitHub)
    - toEntities:
        - "kube-apiserver"
        - "world"
      toPorts:
        - ports:
            - port: "443"
              protocol: "TCP"
        - ports:
            - port: "443"
              protocol: "UDP"
        - ports:
            - port: "80"
              protocol: "TCP"

    # Allow access to local Redis
    - toEndpoints:
        - matchLabels:
            app: renovate-redis
            io.kubernetes.pod.namespace: renovate
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: renovate-redis-policy
  namespace: automation
spec:
  endpointSelector:
    matchLabels:
      app: renovate-redis
  ingress:
    # Allow access from Renovate Server
    - fromEndpoints:
        - matchLabels:
            app: renovate-server
            io.kubernetes.pod.namespace: renovate
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
